refatoração completa do desafio.